[tool.poetry]
name = "notify-api"
version = "0.1.0"
description = "Inner benchmark: Overwatch multi-agent notification API"
authors = ["Overwatch Agents"]
readme = "README.md"
packages = [{include = "notify_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
sqlalchemy = ">=2.0.0"
pydantic = ">=2.0.0"
uvicorn = ">=0.30.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
